syntax = "proto3";
package game;

message loginS {
    string account = 1;
    string password = 2;
}

message loginR {
	int32 ret = 1;
	int32 playerIndex = 2;
	string ip = 3;
}

message loginToGateS {
	int32 playerIndex = 1;
}